initial dump with tcp fixed
